--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "rules": {
-      "max-len": ["error", 200]
-    }
+    "eslint-plugin-react": "^6.10.3"
   }
 }
