--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.2",
     "crypto-js": "^3.1.6",
     "express": "~4.11.1",
+    "prompt": "^1.0.0",
     "ws": "^1.1.0"
   },
   "engines": {
