--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "peer.vote",
+  "name": "peervote",
   "version": "0.0.1",
   "description": "A blockchain for democratic governance.",
   "scripts": {
-    "start": "node main.js"
+    "start": "node peervote.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
     "commander": "^2.9.0",
     "crypto-js": "^3.1.6",
     "express": "~4.11.1",
-    "prompt": "^1.0.0",
     "ws": "^1.1.0"
+  },
+  "bin": {
+    "peervote": "peervote.js"
   },
   "engines": {
     "node": ">=4.3.2"
@@ -23,7 +25,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3"
   },
-  "main": "main.js",
+  "main": "peervote.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DemocracyEarth/peervote.git"
