--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A blockchain for democratic governance.",
   "scripts": {
-    "start": "node peervote.js"
+    "start": "node main.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -13,7 +13,7 @@
     "ws": "^1.1.0"
   },
   "bin": {
-    "peervote": "peervote.js"
+    "peervote": "main.js"
   },
   "engines": {
     "node": ">=4.3.2"
@@ -25,7 +25,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3"
   },
-  "main": "peervote.js",
+  "main": "main.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DemocracyEarth/peervote.git"
