--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A blockchain for democratic governance.",
   "scripts": {
     "transpile-es2015": "babel src -d lib",
-    "start": "./src/node main.js"
+    "start": "./src/node vote.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -14,7 +14,7 @@
     "ws": "^1.1.0"
   },
   "bin": {
-    "peervote": "./src/main.js"
+    "vote": "./src/vote.js"
   },
   "engines": {
     "node": ">=4.3.2"
@@ -28,12 +28,12 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3"
   },
-  "main": "./src/main.js",
+  "main": "./src/vote.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DemocracyEarth/peervote.git"
   },
-  "author": "@santisiri",
+  "author": "Democracy Earth Foundation",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/DemocracyEarth/peervote/issues"
