--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A blockchain for democratic governance.",
   "scripts": {
     "transpile-es2015": "babel src -d lib",
-    "start": "./src/node vote.js"
+    "start": "./src/node peervote.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
@@ -14,7 +14,7 @@
     "ws": "^1.1.0"
   },
   "bin": {
-    "vote": "./src/vote.js"
+    "peervote": "./src/peervote.js"
   },
   "engines": {
     "node": ">=4.3.2"
@@ -28,7 +28,7 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.3"
   },
-  "main": "./src/vote.js",
+  "main": "./src/peervote.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/DemocracyEarth/peervote.git"
